@@ -15,7 +15,7 @@ details on the PSF (Python Software Foundation) standard license, see:
 
 http://www.python.org/2.2.3/license.html
 
-$Id: Debugger.py 2155 2007-03-19 00:45:51Z fperez $"""
+$Id: Debugger.py 2203 2007-04-04 05:08:36Z fperez $"""
 
 #*****************************************************************************
 #
@@ -51,7 +51,9 @@ has_pydb = False
 prompt = 'ipdb> '
 try:
     import pydb
-    if hasattr(pydb.pydb, "runl"):
+    if hasattr(pydb.pydb, "runl") and pydb.version>'1.17':
+        # Version 1.17 is broken, and that's what ships with Ubuntu Edgy, so we
+        # better protetct against it.
         has_pydb = True
         from pydb import Pdb as OldPdb
 except ImportError:
